# vizima

./: NOTES.md  serve.ts
backend/: pyproject.toml
backend/tests/test_visimacli/: test_check_periodic_lon.py  test_format_to_iso.py  test_get_lon-lat_name_for_var.py  test_get_packing_params.py  test_handle_levels.py  test_handle_lonlat.py  test_handle_times.py
backend/vizima/: dataset_model.py  vizimacli.py
backend/vizima/cli/: main.py  utils.py
demo/: demo.js  index.html
frontend/: package.json  rollup.config.mjs  serve.ts  tsconfig.json  vite.config.ts  vite.demo.config.ts
frontend/demo/: .gitignore  demo.css  demowrflambert.js  demowrflambertnc.js  demowrflonlatrot.js  demowrfmercator.js  demowrfpolarstereo.js  demowrfpolarstereonc.js  index.html  main.ts
frontend/scripts/: dataset-schema.json  export-schema.ts
frontend/src/: demo.ts  index.ts  logger.ts  mapviz.ts  styles.ts
frontend/src/animation-renderers/: animation-renderer.ts  flow-renderer.ts  index.ts
frontend/src/animators/: animator.ts  flow-animator.ts  index.ts
frontend/src/colorbar/: colorbar.ts
frontend/src/colorscale/: colorscale.ts  index.ts
frontend/src/components/: canvas-element.ts  canvas-renderer.ts  canvas.ts  flow-animator.ts  json-data.ts  map-view.ts  rendered-canvas.ts  types.ts
frontend/src/controllers/: colorscale-controller.tsx  colorscale-selector.tsx  grid-selector.tsx  index.ts  play-button.tsx  projection-selector.tsx  time-slider.tsx
frontend/src/core/: animation-renderer.ts  (+9 more)
frontend/vizima/: mapviz.ts
scripts/: dataset_meta.json  download_era5.py
(+182 files in other folders)
